chore(authors): update AUTHORS

--- a/packages/nightingale/AUTHORS
+++ b/packages/nightingale/AUTHORS
@@ -1,2 +1,3 @@
+Christophe Hurpeau <christophe.hurpeau+github@gmail.com>
 Christophe Hurpeau <christophe@evaneos.com>
 Christophe Hurpeau <christophe@hurpeau.com>
